--- a/06_mood.Rmd
+++ b/06_mood.Rmd
@@ -50,7 +50,7 @@ The bipolar-unidimensional method was shown to be able to predict time to relaps
   
 ## Bag-of-Items
 \index{Mood assessment!Bag-of-Items}
-In order to make sure all constructs of interest are measured, you can also consider including a number of specific mood items in your EMA questinnaire, rather than one general unipolar item or one bipolar item. For example you can ask respondents "How depressed are you feeling right now" and "How anxious are you feeling right now [@Starr2012]. This strategy often leads to a 'bag-of-items' approach, where single items from various sources, such as existing questionnaires, are combined into a new EMA questionnaire. A benefit of this approach is that you can select items for which information on validity and test-retest reliability is available. A downside is that item scores can only be evaluated separately, rather that providing one overall indication of mood or well-being.
+In order to make sure all constructs of interest are measured, you can also consider including a number of specific mood items in your EMA questionnaire, rather than one general unipolar item or one bipolar item. For example you can ask respondents "How depressed are you feeling right now" and "How anxious are you feeling right now [@Starr2012]. This strategy often leads to a 'bag-of-items' approach, where single items from various sources, such as existing questionnaires, are combined into a new EMA questionnaire. A benefit of this approach is that you can select items for which information on validity and test-retest reliability is available. A downside is that item scores can only be evaluated separately, rather that providing one overall indication of mood or well-being.
 
 Combining data from multiple items, such as mood and loneliness, in one graph can provide respondents with insight in the interaction between the constructs. In r two variables can easily be plotted together:
 
